<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="12dp"
    tools:context="hernandez.perez.uca.com.taximetrodos.activities.ResumeActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <EditText
                android:id="@+id/nombre"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/activity_resume_name" />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <EditText
                android:id="@+id/apellidos"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/activity_resume_last_name" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <EditText
                android:id="@+id/causa"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/activity_resume_cause" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <EditText
                android:id="@+id/estado"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/activity_resume_state" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <EditText
                android:id="@+id/experien_lab"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/activity_resume_work_experience" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <EditText
                android:id="@+id/telefono"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/activity_resume_phone" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <EditText
                android:id="@+id/correo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/activity_resume_mail" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <EditText
                android:id="@+id/estado_civil"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/activity_resume_civil_status" />
        </android.support.design.widget.TextInputLayout>

        <Button
            android:id="@+id/create_resume"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/suggestion_add_activity_button_create" />

    </LinearLayout>

</ScrollView>
