<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="12dp"
    tools:context="hernandez.perez.uca.com.taximetrodos.activities.SuggestionActivity">

    <ImageView
        android:layout_width="@dimen/activity_suggestion_icon_width"
        android:layout_height="@dimen/activity_suggestion_icon_height"
        android:layout_gravity="center_horizontal"
        android:src="@drawable/opinion"/>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <EditText
            android:id="@+id/titulo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/suggestion_add_activity_edit_text_title" />

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <EditText
            android:id="@+id/description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/suggestion_add_activity_edit_text_description" />
    </android.support.design.widget.TextInputLayout>

    <Button
        android:id="@+id/create"
        android:layout_marginTop="6dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/suggestion_add_activity_button_create" />

</LinearLayout>
