<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="hernandez.perez.uca.com.taximetrodos.activities.SignInActivity">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:ignore="ScrollViewSize,UselessParent">

        <ImageView
            android:layout_width="@dimen/activity_splash_screen_margin_top"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:paddingTop="@dimen/default_padding"
            android:src="@drawable/taxibeam"/>

        <Button
            android:layout_width="@dimen/activity_sing_in_width_button"
            android:layout_height="wrap_content"
            android:id="@+id/sign_in"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/activity_sing_in_margin_top_button"
            android:text="@string/activity_sing_in_button_title"
            android:textColor="@color/colorWhite"
            android:background="@color/colorPrimary"/>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:paddingBottom="@dimen/activity_sing_space_layout"
            tools:ignore="UselessLeaf">

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBaseline="@+id/sign_up"
                android:layout_alignBottom="@+id/sign_up"
                android:layout_toLeftOf="@+id/sign_up"
                android:layout_toStartOf="@+id/sign_up"
                android:text="@string/activity_sing_in_question"
                android:textAlignment="center"
                tools:ignore="HardcodedText,ObsoleteLayoutParam" />


            <Button
                android:id="@+id/sign_up"
                android:layout_width="@dimen/activity_sing_size_button"
                android:layout_height="wrap_content"
                android:layout_below="@+id/card_view"
                android:text="@string/activity_sing_in_sign_up"
                android:textColor="@color/colorPrimary"
                tools:ignore="ObsoleteLayoutParam" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/activity_sing_in_margin_card"
            android:orientation="vertical"
            tools:ignore="UselessParent">


            <LinearLayout
                android:id="@+id/editTextsContainer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/imageContainer"
                android:layout_marginBottom="@dimen/activity_sing_in_margin_bottom_editText"
                android:orientation="vertical"
                android:paddingLeft="@dimen/activity_sing_in_margin_horizontal_editText"
                android:paddingRight="@dimen/activity_sing_in_margin_horizontal_editText">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/activity_sing_in_margin_top"
                    android:text="@string/activity_sing_in_title"
                    android:textAlignment="center"
                    android:textSize="@dimen/activity_sing_in_size_title"
                    android:textStyle="bold"
                    tools:ignore="HardcodedText" />

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="@dimen/activity_sing_in_space_image"
                    android:textColorHint="@color/colorPrimaryDark">

                    <EditText
                        android:id="@+id/email"
                        android:layout_width="match_parent"
                        android:drawableRight="@drawable/ic_email"
                        android:layout_height="wrap_content"
                        android:hint="@string/activity_sing_in_email"
                        android:inputType="textEmailAddress"
                        android:textColor="@color/colorPrimaryDark"
                        app:backgroundTint="@color/colorPrimaryDark"
                        tools:ignore="RtlHardcoded" />

                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColorHint="@color/colorPrimaryDark">

                    <EditText
                        android:id="@+id/password"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/activity_sing_in_password"
                        android:drawableRight="@drawable/ic_lock"
                        android:inputType="textPassword"
                        android:textColor="@color/colorPrimaryDark"
                        app:backgroundTint="@color/colorPrimaryDark"
                        tools:ignore="RtlHardcoded,TextFields" />

                </android.support.design.widget.TextInputLayout>

                <ProgressBar
                    android:id="@+id/signInProgressBar"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/activity_sign_in_progress_bar_height"
                    android:layout_gravity="center"
                    android:visibility="gone"

                    ></ProgressBar>

            </LinearLayout>

        </LinearLayout>

    </FrameLayout>

</ScrollView>
