<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="hernandez.perez.uca.com.taximetrodos.activities.SignUpActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:ignore="UselessParent">

            <LinearLayout
                android:id="@+id/editTextsContainer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/imageContainerSignUp"
                android:layout_marginBottom="@dimen/activity_sign_up_margin_bottom_editText"
                android:layout_marginTop="@dimen/padding_layout"
                android:orientation="vertical"
                android:paddingLeft="@dimen/activity_sign_up_margin_horizontal_editText"
                android:paddingRight="@dimen/activity_sign_up_margin_horizontal_editText">

                <ImageView
                    android:id="@+id/usericon"
                    android:layout_width="@dimen/activity_sign_up_icon"
                    android:layout_height="@dimen/activity_sign_up_icon"
                    android:layout_gravity="center_horizontal"
                    android:src="@drawable/usericon"/>


                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="@dimen/category_item_space"
                    android:textColorHint="@color/colorPrimaryDark">

                    <EditText
                        android:id="@+id/nameSignUp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/activity_sign_up_name"
                        android:inputType="textCapWords"
                        android:textColor="@color/colorPrimaryDark"
                        app:backgroundTint="@color/colorPrimaryDark"
                        tools:ignore="RtlHardcoded" />

                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:textColorHint="@color/colorPrimaryDark">

                    <EditText
                        android:id="@+id/userNameSignUp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/activity_sign_up_username"
                        android:inputType="textCapWords"
                        android:textColor="@color/colorPrimaryDark"
                        app:backgroundTint="@color/colorPrimaryDark"
                        tools:ignore="RtlHardcoded" />

                </android.support.design.widget.TextInputLayout>


                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:textColorHint="@color/colorPrimaryDark">

                    <EditText
                        android:id="@+id/emailSignUp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:drawableRight="@drawable/ic_email"
                        android:hint="@string/activity_sign_up_email"
                        android:inputType="textEmailAddress"
                        android:textColor="@color/colorPrimaryDark"
                        app:backgroundTint="@color/colorPrimaryDark"
                        tools:ignore="RtlHardcoded" />

                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColorHint="@color/colorPrimaryDark">

                    <EditText
                        android:id="@+id/passwordSignUp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:drawableRight="@drawable/ic_lock"
                        android:hint="@string/activity_sign_up_password"
                        android:inputType="textPassword"
                        android:textColor="@color/colorPrimaryDark"
                        app:backgroundTint="@color/colorPrimaryDark"
                        tools:ignore="RtlHardcoded,TextFields" />

                </android.support.design.widget.TextInputLayout>

            </LinearLayout>

            <Button
                android:id="@+id/signUpButton"
                android:layout_width="@dimen/activity_sign_up_button_width"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginBottom="@dimen/padding_layout"
                android:layout_marginTop="190dp"
                android:text="@string/activity_sign_up_sign_up_button"
                android:textColor="@color/colorWhite"
                android:background="@color/colorPrimaryDark"
                tools:ignore="ButtonStyle" />


        </FrameLayout>

    </LinearLayout>

</android.support.constraint.ConstraintLayout>
